# charisma

./: .gitignore  CMakeLists.txt  CharismaConfig.cmake.in  Makefile.am  README.md  charisma.c  charisma.h  charisma.pc.in  config.cmake.in  configure.ac  misra-compliance.html
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yml
extras/: README.md  charisma-cli.c
man/: CMakeLists.txt  charisma.1  charisma.3  uchar.3  utf16_decode.3  utf16_encode.3  utf16be_decode.3  utf16be_encode.3  utf16le_decode.3  utf16le_encode.3  utf32_decode.3  utf32_encode.3  utf32be_decode.3  utf32be_encode.3  utf32le_decode.3  utf32le_encode.3  utf8_decode.3  utf8_encode.3
tests/: README.md
